@@ -4,6 +4,7 @@ BEGIN {
   exts[3] = "png";
   exts[4] = "txt";
   printf ("IMAGES_SRC =\n");
+  printf ("HTMLDIR_IMAGES =\n");
   for (i = 1; i <= 4; i++) {
     printf ("IMAGES_%s =\n", toupper (exts[i]));
   }
@@ -24,7 +25,21 @@ BEGIN {
 
     printf ("IMAGES_%s += $(%s_%s)\n", uext, ubasename, uext);
 
-    for (j = 2; j <= NF; j++)
-      printf ("%s.%s: %s\n\t$(TOPDIR)/run-octave -f -q -H -p $(srcdir) --eval \"%s ('%s', '%s');\"\n", $j, ext, script, basename, $j, ext);
+    if (ext == "png") {
+      printf ("HTMLDIR_IMAGES += ");
+      for (j = 2; j <= NF; j++)
+        printf (" octave.html/%s.png", $j);
+      printf ("\n");
+    }
+
+    for (j = 2; j <= NF; j++) {
+      if (ext == "png") {
+	printf ("octave.html/%s.png: %s.png octave.html\n", $j, $j);
+	printf ("\tcp $< $@\n");
+      }
+      printf ("%s.%s: %s\n", $j, ext, script);
+      printf ("\t$(TOPDIR)/run-octave -f -q -H -p $(srcdir) --eval \"%s ('%s', '%s');\"\n",
+	      basename, $j, ext);
+    }
   }
 }
